# aero_task

./: README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
source/: barcode_to_text.py  find_position_of_text.py  get_pdf_data.py  utils.py
test_aero/: test_pdf_data.py
